Chart jumping around when hovering over room types. Fixed

--- a/app/assets/stylesheets/booking_chart.css.scss
+++ b/app/assets/stylesheets/booking_chart.css.scss
@@ -30,6 +30,7 @@
     }
 
     td:nth-child(1):hover {
+			padding: 2px 4px;
 		  border: 1px solid #CFCCCA;
       cursor: auto;
     }
